--- a/package.json
+++ b/package.json
@@ -20,5 +20,8 @@
   "repository": {
     "type": "git",
     "url": "https://github.com/cypress-io/cypress-test-tiny.git"
+  },
+  "dependencies": {
+    "cypress": "4.7.0"
   }
 }
